--- a/style.css
+++ b/style.css
@@ -3,12 +3,12 @@ body {
   margin: 0;
   font-family: Arial, sans-serif;
   background-color: #f5f5f5;
-  color: #333;
+  color: maroon;
 }
 
 /* Navbar */
 nav {
-  background-color: #e0e0e0;
+  background-color: 0e0e0e;
   padding: 1rem 2rem;
 }
 
@@ -26,7 +26,7 @@ nav ul li {
 
 nav a {
   text-decoration: none;
-  color: #333;
+  color: darkgoldenrod;
   font-weight: bold;
 }
 
@@ -42,7 +42,7 @@ nav a:hover {
   justify-content: center;
   height: 80vh;
   text-align: center;
-  background-image: url('https://images.pexels.com/photos/414659/pexels-photo-414659.jpeg');
+  background-color: maroon;
   padding: 2rem;
 }
 
@@ -55,6 +55,7 @@ nav a:hover {
 .hero h1 {
   font-size: 3rem;
   margin-bottom: 1rem;
+  background-color: goldenrod;
 }
 
 .hero p {
@@ -64,7 +65,7 @@ nav a:hover {
 }
 
 .hero button {
-  background-color: #333;
+  background-color: goldenrod;
   color: #fff;
   border: none;
   padding: 0.75rem 1.5rem;
@@ -73,5 +74,5 @@ nav a:hover {
 }
 
 .hero button:hover {
-  background-color: #555;
+  background-color: darkgoldenrod;
 }
